<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OTG直连打印</string>
    <string name="title">HP打印机 OTG 直连打印</string>
    <string name="preview_desc">图片预览</string>
    <string name="status_idle">请选择图片/PDF/Word或从微信/QQ分享到本应用</string>
    <string name="paper_label">纸张</string>
    <string name="dpi_label">质量</string>
    <string name="pick_image">选择文件 (图片/PDF/Word)</string>
    <string name="print">打印</string>
    <string name="save_bin">保存打印流 (调试)</string>
</resources>
